src/snapshots/terraform_aws_default_log_retention__tests__CWMetricCall_process_event_retention_already_set.snap
---
source: src/main.rs
expression: metrics
---
[
    MetricDatum {
        metric_name: Some(
            "AlreadyHasRetention",
        ),
        dimensions: None,
        timestamp: None,
        value: Some(
            1.0,
        ),
        statistic_values: None,
        values: None,
        counts: None,
        unit: None,
        storage_resolution: None,
    },
]
