src/snapshots/terraform_aws_default_log_retention__tests__process_event_do_not_overwrite_when_retention_tag_set.snap
---
source: src/main.rs
expression: result
---
Object {
    "message": String("Not setting retention for MyLogGroupWasCreated because tag `retention`=`Do not override please` exists on it."),
}
