src/snapshots/terraform_aws_default_log_retention__tests__process_event_fails_when_put_retention_policy_fails.snap
---
source: src/main.rs
expression: error
---
Error {
    message: "DataAlreadyAcceptedException",
    severity: Error,
}
