src/snapshots/terraform_aws_default_log_retention__tests__process_event_retention_already_set.snap
---
source: src/main.rs
expression: result
---
Object {
    "message": String("Not setting retention for MyLogGroupWasCreated because it is set to 30 days already."),
}
