src/snapshots/terraform_aws_default_log_retention__tests__process_event_success_no_tags.snap
---
source: src/main.rs
expression: result
---
Object {
    "message": String("Retention set successfully"),
}
