src/snapshots/terraform_aws_default_log_retention__tests__process_event_success_no_tags_different_aws_partition.snap
---
source: src/main.rs
assertion_line: 286
expression: result
---
Object {
    "message": String("Retention set successfully"),
}
